Fix image paths

--- a/examples/website/index.html
+++ b/examples/website/index.html
@@ -153,7 +153,7 @@
       }
       .legend-item-5 {
         background-color: #8f398f;
-        background-image: url("/bg.png");
+        background-image: url("bg.png");
       }
       .legend-item-6 {
         background-color: #00b3a4;
