Change method of scaling up background images

--- a/examples/website/index.html
+++ b/examples/website/index.html
@@ -127,14 +127,14 @@
         column-count: 3;
       }
       .legend-item {
-        height: 13px;
-        width: 13px;
+        height: 22px;
+        width: 22px;
         display: inline-block;
         position: relative;
-        top: 10px;
-        margin-bottom: 10px;
-        transform: scale(1.5) translateX(2px);
-        margin-right: 8px;
+        top: 8px;
+        margin-bottom: 4px;
+        margin-right: 4px;
+        background-size: 10px;
       }
       body:not(.tm-on) .legend-item {
         background-image: none !important;
@@ -157,7 +157,7 @@
       .legend-item-5 {
         background-color: #8f398f;
         background-image: url("bg.png");
-                transform: scale(1.5) translateX(2px) !important;
+        background-size: initial;
       }
       .legend-item-6 {
         background-color: #00b3a4;
@@ -174,8 +174,8 @@
       .legend-item-9 {
         background-color: #96622d;
         background-image: url("textures/tm-circle-medium-100.svg");
-        background-position-x: 2px;
-        background-position-y: 2px;
+        background-position-x: 4px;
+        background-position-y: 4px;
       }
       input[type="checkbox"] {
         margin: 0;
