Update pattern choices

--- a/examples/website/index.html
+++ b/examples/website/index.html
@@ -139,12 +139,9 @@
       body:not(.tm-on) .legend-item {
         background-image: none !important;
       }
-      .legend-item-1 {
-        background-color: #2965cc;
-        background-image: url("textures/tm-circle-medium-100.svg");
-      }
       .legend-item-2 {
         background-color: #29a634;
+        background-image: url("textures/tm-circle-light-100.svg");
       }
       .legend-item-3 {
         background-color: #d99e0b;
@@ -161,7 +158,7 @@
       }
       .legend-item-6 {
         background-color: #00b3a4;
-        background-image: url("textures/tm-circle-alt-light-200.svg");
+        background-image: url("textures/tm-square-100.svg");
       }
       .legend-item-7 {
         background-color: #db2c6f;
@@ -173,7 +170,7 @@
       }
       .legend-item-9 {
         background-color: #96622d;
-        background-image: url("textures/tm-circle-medium-100.svg");
+        background-image: url("textures/tm-plus-200.svg");
         background-position-x: 4px;
         background-position-y: 4px;
       }
@@ -258,7 +255,7 @@
 
       var map = new mapboxgl.Map({
         container: "map", // container id
-        style: "mapbox://styles/azavea/ckmnt6qwo0t3v17o7623r2dd8", // style URL
+        style: "mapbox://styles/azavea/ckmp4rysp0qc917mpick8w88s", // style URL
         minZoom: 15.5,
         center: defaultCenter, // starting position [lng, lat]
         zoom: defaultZoom,
