Change background position

--- a/examples/website/index.html
+++ b/examples/website/index.html
@@ -141,11 +141,16 @@
       }
       .legend-item-2 {
         background-color: #29a634;
-        background-image: url("textures/tm-circle-light-100.svg");
+        background-image: url("bg-2.png");
+        background-size: initial;
+        background-position-x: -1px;
+        background-position-y: -1px;
       }
       .legend-item-3 {
         background-color: #d99e0b;
         background-image: url("textures/tm-grid-light-200.svg");
+        background-position-x: 1px;
+        background-position-y: 1px;
       }
       .legend-item-4 {
         background-color: #d13913;
@@ -153,26 +158,32 @@
       }
       .legend-item-5 {
         background-color: #8f398f;
-        background-image: url("bg.png");
+        background-image: url("bg-5.png");
         background-size: initial;
       }
       .legend-item-6 {
         background-color: #00b3a4;
         background-image: url("textures/tm-square-100.svg");
+        background-position-x: 3px;
+        background-position-y: 2px;
       }
       .legend-item-7 {
         background-color: #db2c6f;
         background-image: url("textures/tm-slash-forward-100.svg");
+        background-position-x: 2px;
+        background-position-y: 1px;
       }
       .legend-item-8 {
         background-color: #9bbf30;
         background-image: url("textures/tm-crosshatch-light-200.svg");
+        background-position-x: 1px;
+        background-position-y: -4px;
       }
       .legend-item-9 {
         background-color: #96622d;
         background-image: url("textures/tm-plus-200.svg");
-        background-position-x: 4px;
-        background-position-y: 4px;
+        background-position-x: 11px;
+        background-position-y: 1px;
       }
       input[type="checkbox"] {
         margin: 0;
