--- a/examples/website/index.html
+++ b/examples/website/index.html
@@ -174,8 +174,8 @@
         background-position-y: 1px;
       }
       .legend-item-8 {
-        background-color: #9bbf30;
-        background-image: url("textures/tm-crosshatch-light-200.svg");
+        background-color: #2965cc;
+        background-image: url("textures/tm-line-vertical-light-100.svg");
         background-position-x: 1px;
         background-position-y: -4px;
       }
@@ -266,7 +266,7 @@
 
       var map = new mapboxgl.Map({
         container: "map", // container id
-        style: "mapbox://styles/azavea/ckmp4rysp0qc917mpick8w88s", // style URL
+        style: "mapbox://styles/azavea/ckmp89cv03zcb17s22v4q504x", // style URL
         minZoom: 15.5,
         center: defaultCenter, // starting position [lng, lat]
         zoom: defaultZoom,
