--- a/website/index.html
+++ b/website/index.html
@@ -67,60 +67,72 @@
         <div class="container">
           <ul class="types">
             <li class="types__item">
-              <h3 class="types__heading heading-size--400">Polygons</h3>
-              <p>
-                Mix and match from 60 simple patterns, adding an additional
-                layer of symbology on top of color.
-              </p>
+              <div class="types__left">
+                <h3 class="types__heading heading-size--400">Polygons</h3>
+                <p>
+                  Mix and match from 60 simple patterns, adding an additional
+                  layer of symbology on top of color.
+                </p>
+                <div class="types__links">
+                  <a href=""
+                    >Documentation<span class="sr-only"> for polygons</span></a
+                  >
+                  /
+                  <a href="">Demo<span class="sr-only"> for polygons</span></a>
+                </div>
+              </div>
 
-              <img
-                class="types__image"
-                src="img/texturemap-screenshot-polygons.png"
-                alt="Screenshot of TextureMap applied to polygons"
-              />
-              <div class="types__links">
-                <a href=""
-                  >Documentation<span class="sr-only"> for polygons</span></a
-                >
-                / <a href="">Demo<span class="sr-only"> for polygons</span></a>
+              <div class="types__right">
+                <img
+                  class="types__image"
+                  src="img/texturemap-screenshot-polygons.png"
+                  alt="Screenshot of TextureMap applied to polygons"
+                />
               </div>
             </li>
             <li class="types__item">
-              <h3 class="types__heading heading-size--400">Lines</h3>
-              <p>
-                Made with a creative assortment of line dashes and gaps. The
-                result is 10 uniquely identifiable line styles.
-              </p>
+              <div class="types__left">
+                <h3 class="types__heading heading-size--400">Lines</h3>
+                <p>
+                  Made with a creative assortment of line dashes and gaps. The
+                  result is 10 uniquely identifiable line styles.
+                </p>
+                <div class="types__links">
+                  <a href=""
+                    >Documentation<span class="sr-only"> for lines</span></a
+                  >
+                  / <a href="">Demo<span class="sr-only"> for lines</span></a>
+                </div>
+              </div>
 
-              <img
-                class="types__image"
-                src="img/texturemap-screenshot-lines.png"
-                alt="Screenshot of TextureMap applied to lines"
-              />
-              <div class="types__links">
-                <a href=""
-                  >Documentation<span class="sr-only"> for lines</span></a
-                >
-                / <a href="">Demo<span class="sr-only"> for lines</span></a>
+              <div class="types__right">
+                <img
+                  class="types__image"
+                  src="img/texturemap-screenshot-lines.png"
+                  alt="Screenshot of TextureMap applied to lines"
+                />
               </div>
             </li>
             <li class="types__item">
-              <h3 class="types__heading heading-size--400">Points</h3>
-              <p>
-                20 distinct geometric shapes to use as markers. For when a
-                conventional icon doesn’t fit the meaning of your data.
-              </p>
-
-              <img
-                class="types__image"
-                src="img/texturemap-screenshot-points.png"
-                alt="Screenshot of TextureMap applied to points"
-              />
-              <div class="types__links">
-                <a href=""
-                  >Documentation<span class="sr-only"> for points</span></a
-                >
-                / <a href="">Demo<span class="sr-only"> for points</span></a>
+              <div class="types__left">
+                <h3 class="types__heading heading-size--400">Points</h3>
+                <p>
+                  20 distinct geometric shapes to use as markers. For when a
+                  conventional icon doesn’t fit the meaning of your data.
+                </p>
+                <div class="types__links">
+                  <a href=""
+                    >Documentation<span class="sr-only"> for points</span></a
+                  >
+                  / <a href="">Demo<span class="sr-only"> for points</span></a>
+                </div>
+              </div>
+              <div class="types__right">
+                <img
+                  class="types__image"
+                  src="img/texturemap-screenshot-points.png"
+                  alt="Screenshot of TextureMap applied to points"
+                />
               </div>
             </li>
           </ul>
@@ -207,8 +219,13 @@
       </section>
     </main>
     <footer class="footer-primary">
-      <div class="container">
-        <div class="container">Made by Azavea</div>
+      <div class="container footer-primary__container">
+        <div class="footer__brand">
+          <span>Made by </span>
+          <a href="https://azavea.com"
+            ><img class="footer__logo" src="img/azavea-logo.svg" alt="Azavea"
+          /></a>
+        </div>
         <nav class="header-primary__nav">
           <a class="header-primary__link" href="#">Documentation</a>
           <a class="header-primary__link" href="#">Download</a>
