--- a/website/index.html
+++ b/website/index.html
@@ -43,13 +43,14 @@
       <section class="section-hero">
         <div class="container">
           <div class="hero">
-            <div>
-              <h2 class="heading-size--500">Make your map accessible</h2>
+            <div class="hero__content">
+              <h2 class="heading-size--500">
+                Design web maps for accessibility
+              </h2>
               <p class="large">
                 Textures, patterns, and shapes that make web maps work for
-                people with color vision deficiency. Designed for Mapbox GL and
-                MapLibre GL. Free and open source, easy to use with your next
-                map.
+                people with color vision deficiency. Built for the Mapbox GL and
+                MapLibre GL libraries.
               </p>
               <div class="hero__buttons">
                 <a href="" class="hero__button-gettingstarted"
