--- a/website/index.html
+++ b/website/index.html
@@ -135,13 +135,22 @@
                   <a href="">Demo<span class="sr-only"> for polygons</span></a>
                 </div>
               </div>
-
               <div class="types__right">
-                <img
-                  class="types__image"
-                  src="img/texturemap-screenshot-polygons.png"
-                  alt="Screenshot of TextureMap applied to polygons"
-                />
+                <picture>
+                  <source
+                    srcset="img/texturemap-screenshot-polygons.webp"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="img/texturemap-screenshot-polygons.png"
+                    type="image/png"
+                  />
+                  <img
+                    class="types__image"
+                    src="img/texturemap-screenshot-polygons.png"
+                    alt="Screenshot of TextureMap applied to polygons"
+                  />
+                </picture>
               </div>
             </li>
             <li class="types__item">
@@ -160,11 +169,21 @@
               </div>
 
               <div class="types__right">
-                <img
-                  class="types__image"
-                  src="img/texturemap-screenshot-lines.png"
-                  alt="Screenshot of TextureMap applied to lines"
-                />
+                <picture>
+                  <source
+                    srcset="img/texturemap-screenshot-lines.webp"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="img/texturemap-screenshot-lines.png"
+                    type="image/png"
+                  />
+                  <img
+                    class="types__image"
+                    src="img/texturemap-screenshot-lines.png"
+                    alt="Screenshot of TextureMap applied to lines"
+                  />
+                </picture>
               </div>
             </li>
             <li class="types__item">
@@ -182,11 +201,21 @@
                 </div>
               </div>
               <div class="types__right">
-                <img
-                  class="types__image"
-                  src="img/texturemap-screenshot-points.png"
-                  alt="Screenshot of TextureMap applied to points"
-                />
+                <picture>
+                  <source
+                    srcset="img/texturemap-screenshot-points.webp"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="img/texturemap-screenshot-points.png"
+                    type="image/png"
+                  />
+                  <img
+                    class="types__image"
+                    src="img/texturemap-screenshot-points.png"
+                    alt="Screenshot of TextureMap applied to points"
+                  />
+                </picture>
               </div>
             </li>
           </ul>
@@ -225,11 +254,21 @@
               </p>
             </div>
             <div>
-              <img
-                class="accessibility__image"
-                src="img/accessibility-photos.jpg"
-                alt="A collage of three photos intended: one photo of a hand holding a phone displaying a map, one photo of a woman holding a paper map, one photo of a close up paper map"
-              />
+              <picture>
+                <source
+                  srcset="img/accessibility-photos.webp"
+                  type="image/webp"
+                />
+                <source
+                  srcset="img/accessibility-photos.jpg"
+                  type="image/jpg"
+                />
+                <img
+                  class="accessibility__image"
+                  src="img/accessibility-photos.jpg"
+                  alt="A collage of three photos intended: one photo of a hand holding a phone displaying a map, one photo of a woman holding a paper map, one photo of a close up paper map"
+                />
+              </picture>
             </div>
           </section>
         </div>
