Lazy load fonts

--- a/website/index.html
+++ b/website/index.html
@@ -3,6 +3,8 @@
   <head>
     <link defer href="css/mapboxgl.css" rel="stylesheet" />
     <script defer src="js/mapboxgl.js"></script>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <meta charset="utf-8" />
     <title>
       TextureMap: textures, patterns, and shapes for web map accessibility
@@ -48,8 +50,6 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="msapplication-config" content="favicons/browserconfig.xml" />
     <meta name="theme-color" content="#333333" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/main.css" />
     <meta name="theme-color" content="#fafafa" />
   </head>
 
@@ -58,7 +58,7 @@
       <div class="container header-primary__container">
         <h1 class="sr-only">TextureMap</h1>
         <div class="header-primary__logo">
-          <img src="img/texturemap-logo.svg" alt="TextureMap logo" />
+          <img src="img/texturemap-logo.svg" height="32" width="170" alt="TextureMap logo" />
         </div>
         <nav aria-label="Header navigation" class="header-primary__nav">
           <a class="header-primary__link" href="#">Documentation</a>
@@ -323,7 +323,7 @@
       <div class="container footer-primary__container">
         <div class="footer__brand">
           <a href="https://azavea.com"
-            ><img class="footer__logo" src="img/azavea-logo.svg" alt="Azavea"
+            ><img class="footer__logo" width="131" height="32" src="img/azavea-logo.svg" alt="Azavea"
           /></a>
         </div>
         <nav aria-label="Footer navigation" class="footer-primary__nav">
