--- a/website/index.html
+++ b/website/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link defer href="css/mapboxgl.css" rel="stylesheet" />
-    <script defer src="js/mapboxgl.js"></script>
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <script>
+      if (window.innerWidth > 768) {
+        document.write(
+          '<link defer href="css/mapboxgl.css" rel="stylesheet" /><script defer src="js/mapboxgl.js"><\/script>'
+        );
+      }
+    </script>
+    <link defer rel="stylesheet" href="css/normalize.css" />
+    <link defer rel="stylesheet" href="css/main.css" />
     <meta charset="utf-8" />
     <title>
       TextureMap: textures, patterns, and shapes for web map accessibility
@@ -58,7 +63,12 @@
       <div class="container header-primary__container">
         <h1 class="sr-only">TextureMap</h1>
         <div class="header-primary__logo">
-          <img src="img/texturemap-logo.svg" height="32" width="170" alt="TextureMap logo" />
+          <img
+            src="img/texturemap-logo.svg"
+            height="32"
+            width="170"
+            alt="TextureMap logo"
+          />
         </div>
         <nav aria-label="Header navigation" class="header-primary__nav">
           <a class="header-primary__link" href="#">Documentation</a>
@@ -323,7 +333,12 @@
       <div class="container footer-primary__container">
         <div class="footer__brand">
           <a href="https://azavea.com"
-            ><img class="footer__logo" width="131" height="32" src="img/azavea-logo.svg" alt="Azavea"
+            ><img
+              class="footer__logo"
+              width="131"
+              height="32"
+              src="img/azavea-logo.svg"
+              alt="Azavea"
           /></a>
         </div>
         <nav aria-label="Footer navigation" class="footer-primary__nav">
