--- a/website/index.html
+++ b/website/index.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script>
-      if (window.innerWidth > 768) {
-        document.write(
-          '<link defer href="css/mapboxgl.css" rel="stylesheet" /><script defer src="js/mapboxgl.js"><\/script>'
-        );
-      }
-    </script>
-    <link defer rel="stylesheet" href="css/normalize.css" />
-    <link defer rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <meta charset="utf-8" />
     <title>
       TextureMap: textures, patterns, and shapes for web map accessibility
@@ -98,28 +91,12 @@
               </div>
             </div>
             <div id="map" class="map texturemap-on">
-              <div class="map__controls">
-                <label class="map__label"
-                  ><input
-                    id="checkbox-monochromacy"
-                    class="map__checkbox"
-                    onclick="toggleMonochromacy()"
-                    type="checkbox"
-                    checked
-                  />
-                  Simulate monochromacy</label
-                >
-                <label class="map__label"
-                  ><input
-                    id="checkbox-texturemap"
-                    class="map__checkbox"
-                    onclick="toggleTexturemap()"
-                    type="checkbox"
-                    checked
-                  />
-                  Use TextureMap</label
-                >
-              </div>
+              <iframe
+                class="map__iframe"
+                loading="lazy"
+                src="map"
+                title="Demo of TextureMap"
+              ></iframe>
             </div>
           </div>
         </div>
@@ -284,6 +261,8 @@
                   class="accessibility__image"
                   src="img/accessibility-photos.jpg"
                   loading="lazy"
+                  width="513"
+                  height="429"
                   alt="A collage of three photos intended: one photo of a hand holding a phone displaying a map, one photo of a woman holding a paper map, one photo of a close up paper map"
                 />
               </picture>
