Defer css files

--- a/website/index.html
+++ b/website/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link defer rel="stylesheet" href="css/normalize.css" />
+    <link defer rel="stylesheet" href="css/main.css" />
     <meta charset="utf-8" />
     <title>
       TextureMap: textures, patterns, and shapes for web map accessibility
