--- a/website/index.html
+++ b/website/index.html
@@ -91,23 +91,6 @@
               </div>
             </div>
             <div id="map" class="map texturemap-on">
-              <picture>
-                  <source
-                    srcset="img/placeholder.webp"
-                    type="image/webp"
-                  />
-                  <source
-                    srcset="img/placeholder.png"
-                    type="image/png"
-                  />
-                  <img
-                    loading="lazy"
-                    width="100%"
-                    height="auto"
-                    src="img/placeholder.png"
-                    alt="Screenshot of TextureMap"
-                  />
-                </picture>
             </div>
           </div>
         </div>
@@ -347,8 +330,8 @@
           mapLoaded = true;
         }
       }
+      window.onload = loadMap;
       window.addEventListener("resize", loadMap);
-      loadMap();
     </script>
   </body>
 </html>
