Remove placeholder image
This didn't help the PageSpeed score

--- a/website/index.html
+++ b/website/index.html
@@ -330,7 +330,7 @@
           mapLoaded = true;
         }
       }
-      window.onload = loadMap;
+      loadMap();
       window.addEventListener("resize", loadMap);
     </script>
   </body>
