Change map element to aside, which is a better description than main

--- a/website/map/index.html
+++ b/website/map/index.html
@@ -53,7 +53,7 @@
   </head>
 
   <body>
-    <main>
+    <aside aria-label="Map demo">
       <div id="map" class="map texturemap-on">
         <div class="map__controls">
           <label class="map__label"
@@ -78,6 +78,6 @@
           >
         </div>
       </div>
-    </main>
+    </aside>
   </body>
 </html>
