Let's punch up that copy

--- a/website/index.html
+++ b/website/index.html
@@ -90,8 +90,7 @@
                 <a href="" class="hero__button-download">Download</a>
               </div>
             </div>
-            <div id="map" class="map texturemap-on">
-            </div>
+            <div id="map" class="map texturemap-on"></div>
           </div>
         </div>
       </section>
@@ -103,8 +102,8 @@
               <div class="types__left">
                 <h3 class="types__heading heading-size--400">Polygons</h3>
                 <p>
-                  Mix and match from 60 minimalist patterns, for an additional
-                  symbology besides color.
+                  Go beyond color by offering a pattern fill on your parcels,
+                  admin boundaries, etc.
                 </p>
                 <div class="types__links">
                   <a href=""
@@ -139,8 +138,8 @@
               <div class="types__left">
                 <h3 class="types__heading heading-size--400">Lines</h3>
                 <p>
-                  A selection of 10 unique line styles with an assortment of
-                  dashes and gaps.
+                  Use dashes, gaps, and round caps for unique line styles.
+                  People will line up to see your maps!
                 </p>
                 <div class="types__links">
                   <a href=""
@@ -175,8 +174,8 @@
               <div class="types__left">
                 <h3 class="types__heading heading-size--400">Points</h3>
                 <p>
-                  20 shapes to use as markers. For when an icon doesn’t fit the
-                  meaning of your data.
+                  Allow every user to get your point. These simple shapes are as
+                  fun as they are functional.
                 </p>
                 <div class="types__links">
                   <a href=""
@@ -217,28 +216,31 @@
             <div>
               <h3 class="heading-size--400">About maps and accessibility</h3>
               <p>
-                A map can be an impassible barrier. During the Covid-19
-                pandemic, blind people were
+              Digital maps have enabled a revolution
+                in wayfinding, planning, and analysis. But for many people, the map on your website is an impassible barrier.
+              </p>
+              <p>
+                During the Covid-19 pandemic, blind people were
                 <a
                   href="https://www.nbcnews.com/business/consumer/blind-americans-face-roadblocks-booking-online-vaccine-appointments-n1260954"
                   >blocked from booking vaccine appointments</a
                 >
-                because a website required users to interact with a map to move
-                forward in the process. As cartographers, designers, and
+                because a website required users to interact with a map to
+                complete the process. As cartographers, designers, and
                 developers, we can do better.
               </p>
               <p>
                 One rule of thumb is to think of a map as a supplement to more
                 accessible forms of information and interaction. Offer data in
                 other formats, such as tables and lists. Design workflows that
-                don’t depend on using a map to get to the next step. If the map
-                disappeared, could you still complete your task?
+                don’t depend on a map to get to the next step. Ask: if the map
+                disappeared, could a user still complete their task?
               </p>
               <p>
                 TextureMap can make your map work better for people with color
-                vision deficiency, but we want to be clear that it isn’t a
-                complete solution. For a truly accessible experience, provide an
-                alternative option.
+                vision deficiency. But we want to be clear that it isn’t a
+                complete solution to accessibility. For a truly accessible
+                experience, provide an alternative to maps.
               </p>
             </div>
             <div>
