--- a/website/map/index.html
+++ b/website/map/index.html
@@ -55,7 +55,7 @@
   <body>
     <aside aria-label="Map demo">
       <div id="map" class="map texturemap-on">
-        <div class="map__controls">
+<!--         <div class="map__controls">
           <label class="map__label"
             ><input
               id="checkbox-monochromacy"
@@ -76,7 +76,7 @@
             />
             Use TextureMap</label
           >
-        </div>
+        </div> -->
       </div>
     </aside>
   </body>
