Continue copy punch up

--- a/website/index.html
+++ b/website/index.html
@@ -102,8 +102,7 @@
               <div class="types__left">
                 <h3 class="types__heading heading-size--400">Polygons</h3>
                 <p>
-                  Go beyond color by offering a pattern fill on your parcels,
-                  admin boundaries, etc.
+                  Go beyond color by offering an accessibility-boosting pattern fill for your polygon layers.
                 </p>
                 <div class="types__links">
                   <a href=""
@@ -139,7 +138,7 @@
                 <h3 class="types__heading heading-size--400">Lines</h3>
                 <p>
                   Use dashes, gaps, and round caps for unique line styles.
-                  People will line up to see your maps!
+                  People will line up to see your maps.
                 </p>
                 <div class="types__links">
                   <a href=""
@@ -174,7 +173,7 @@
               <div class="types__left">
                 <h3 class="types__heading heading-size--400">Points</h3>
                 <p>
-                  Allow every user to get your point. These simple shapes are as
+                  Allow everyone to understand your point. These simple shapes are as
                   fun as they are functional.
                 </p>
                 <div class="types__links">
