More copy changes

--- a/website/index.html
+++ b/website/index.html
@@ -102,7 +102,7 @@
               <div class="types__left">
                 <h3 class="types__heading heading-size--400">Polygons</h3>
                 <p>
-                  Go beyond color by offering an accessibility-boosting pattern fill for your polygon layers.
+                  Shape up your polygon layers by offering an accessibility-boosting pattern fill.
                 </p>
                 <div class="types__links">
                   <a href=""
@@ -173,7 +173,7 @@
               <div class="types__left">
                 <h3 class="types__heading heading-size--400">Points</h3>
                 <p>
-                  Allow everyone to understand your point. These simple shapes are as
+                  Allow everyone to understand your point. These simple symbols are as
                   fun as they are functional.
                 </p>
                 <div class="types__links">
@@ -216,7 +216,7 @@
               <h3 class="heading-size--400">About maps and accessibility</h3>
               <p>
               Digital maps have enabled a revolution
-                in wayfinding, planning, and analysis. But for many people, the map on your website is an impassible barrier.
+                in wayfinding, planning, and analysis. But for many people, a map can be a barrier to using a website.
               </p>
               <p>
                 During the Covid-19 pandemic, blind people were
@@ -226,7 +226,7 @@
                 >
                 because a website required users to interact with a map to
                 complete the process. As cartographers, designers, and
-                developers, we can do better.
+                developers, we need to do better.
               </p>
               <p>
                 One rule of thumb is to think of a map as a supplement to more
@@ -238,8 +238,8 @@
               <p>
                 TextureMap can make your map work better for people with color
                 vision deficiency. But we want to be clear that it isn’t a
-                complete solution to accessibility. For a truly accessible
-                experience, provide an alternative to maps.
+                complete solution. For a truly accessible
+                experience, you will need to provide your users with a great experience that is not centered on a map.
               </p>
             </div>
             <div>
