Continue copy editing

--- a/website/index.html
+++ b/website/index.html
@@ -137,8 +137,10 @@
               <div class="types__left">
                 <h3 class="types__heading heading-size--400">Lines</h3>
                 <p>
-                  Use dashes, gaps, and round caps for unique line styles.
-                  People will line up to see your maps.
+
+                  Use dashes and gaps for unique line styles.
+                  People will line up to see your maps!
+
                 </p>
                 <div class="types__links">
                   <a href=""
@@ -173,7 +175,7 @@
               <div class="types__left">
                 <h3 class="types__heading heading-size--400">Points</h3>
                 <p>
-                  Allow everyone to understand your point. These simple symbols are as
+                  Allow everyone to get your point. These symbols are as
                   fun as they are functional.
                 </p>
                 <div class="types__links">
